# OpenGL_project_template

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  hello_triangle_indexed.cpp
